# sql-workshop02---Do-jupyternotebook-ao-deploy

./: .env.dev  Dockerfile  database.py  pyproject.toml
