[tool.poetry]
name = "sql-workshop02-do-jupyternotebook-ao-deploy"
version = "0.1.0"
description = ""
authors = ["keitarods <keitarojp@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
